- Class_Wookiee, Class_Cultist
- weapons.dat stuff (npcDamageMult, npcSpeedMult)
- alt-fire field works for .npc files?
- other .npc fields:
fastPunches, kicks, freeMovement, aggression = punching...
- 

other:
- kick knockdown based on hit location
- better Jedi AI
- NPCs avoid walls and cliffs
- better saber throws, strong force push


-----------------------------------------------------------------------
Only larger/more important changes recorded here:
new cvars:
g_autoRoll - been there for a while, now works 100% correctly, if 1
default JA behavior, if 0 you have to be holding USE to roll
g_char_forcePowerMax - requires level restart, like the NPC setting but for the player
g_char_forceRegen - requires level restart, like NPC setting but for player
g_char_parryBonus - like the .sab file setting but applied on game load for player
g_char_breakParryBonus - like the .sab file setting but applied on game load for player
all these affect the player's stats
g_handicap - goes up to 200 now
g_saberDamageScale - this scales saber damage, and is saved with your savegame
g_saberForceDrains - if 1 special moves drain the amount of FP from the
next cvar, katas not affected
g_saberForceDrainAmount - if g_saberForceDrains is 1, special moves
drain this amount of FP, katas not affected
g_saberLockSuperBreaks - if 1 default JA behavior of saber locks, if 0
no super breaks (1-hit KOs) ever happen after saber locks
g_saberLockStyle - dummy cvar. Later maybe make it so superbreaks happen
under certain conditions
g_saberMoreRealistic - no longer write-protected
g_weaponVelocity, g_weaponAltVelocity - use this to multiply the speed of most projectiles

Gameplay mechanics -
Force powers -- (with g_forceNewPowers 1)
- Force Jump height for all levels increased by 25%
- Force Pull level 1 pulls weapons only, level 2 can knockdown, level 3 can pull toward you somewhat
- Force Sense gives limited snipershot dodging ability
- Force Speed decreases cost of sniper shot dodging at Level 3