@@ -518,7 +518,7 @@ void NPC_BSGrenadier_Attack( void )
 
 	//See if we should switch to melee attack
 	if ( (enemyDist < 16384 && enemyUsingSaber)
-		|| (enemyDist < 64*64 && !Q_irand(0,3))) //slight chance to throw a punch if player is super close
+		|| (enemyDist < 64*64 && !Q_irand(0,50))) //chance to try punching if player is super close
 		// 50% chance if enemy very close to use melee on saber wielding enemy
 	{//enemy is close and not using saber or very close and random chance
 		if ( NPC->client->ps.weapon == WP_THERMAL )
@@ -530,9 +530,9 @@ void NPC_BSGrenadier_Attack( void )
 				//reset fire-timing variables
 				if (NPCInfo->aiFlags&NPCAI_HEAVY_MELEE)
 				{
-					if (enemyUsingSaber && NPC->attackDebounceTime < level.time)
-					{//don't try this again for a little while
-						NPC->attackDebounceTime = level.time + Q_irand(1000, 3000);
+					if (enemyUsingSaber && TIMER_Done(NPC, "sleepTime"))
+					{
+						TIMER_Set(NPC, "sleepTime", Q_irand(2000, 5000));//keep using melee for a short while
 						NPC_ChangeWeapon(WP_MELEE);
 						if (!(NPCInfo->scriptFlags&SCF_CHASE_ENEMIES))//NPCInfo->behaviorState == BS_STAND_AND_SHOOT )
 						{//FIXME: should we be overriding scriptFlags?
@@ -540,7 +540,7 @@ void NPC_BSGrenadier_Attack( void )
 						}
 					}
 					else
-					{//not using saber, just do it
+					{//enemy not using saber, just go for it
 						NPC_ChangeWeapon(WP_MELEE);
 						if (!(NPCInfo->scriptFlags&SCF_CHASE_ENEMIES))//NPCInfo->behaviorState == BS_STAND_AND_SHOOT )
 						{//FIXME: should we be overriding scriptFlags?
@@ -559,9 +559,9 @@ void NPC_BSGrenadier_Attack( void )
 			//reset fire-timing variables
 			if (enemyUsingSaber && enemyDist < 64*64)
 			{//if enemy is close and using saber, wait until we've at least had a short chance to use melee
-				if (NPC->attackDebounceTime > level.time)
+				if (TIMER_Done(NPC, "sleepTime"))
 				{
-					NPC->attackDebounceTime = level.time + Q_irand(1500, 3500);
+					TIMER_Set(NPC, "sleepTime", Q_irand(1500, 3000));
 					NPC_ChangeWeapon(WP_THERMAL);
 				}
 			}
